<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/secListRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="@dimen/padding_list_row"
    android:paddingTop="0dp">

    <!-- Section for DSSID -->
    <LinearLayout
        android:id="@+id/secMemberName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F3F3"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/DSSID"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/DSSID"
            android:textColor="#006699"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Section for Member Details -->
    <LinearLayout
        android:id="@+id/secMemberDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secMemberName"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="10dp">

        <!-- Member Info in Two Equal Columns -->
        <GridLayout
            android:id="@+id/gridMemberDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingTop="5dp"
            android:paddingBottom="8dp">

            <!-- First Column -->
            <TextView
                android:id="@+id/Name"
                android:text="@string/Name"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                 />

            <TextView
                android:id="@+id/HHHead"
                android:text="@string/HHHead"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                 />

            <TextView
                android:id="@+id/MoName"
                android:text="@string/MoName"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1" />


            <TextView
                android:id="@+id/BDate"
                android:text="@string/BDate"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1" />
            <TextView
                android:id="@+id/FaName"
                android:text="@string/FaName"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1" />


            <TextView
                android:id="@+id/MemberAge"
                android:text="@string/MemberAge"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1" />

            <TextView
                android:id="@+id/MemberID"
                android:visibility="gone"
                android:text="@string/MemberID"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1" />






        </GridLayout>
        <!-- Right Section: Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
